app-proxy - casos de uso con test

--- a/servidor/business/pom.xml
+++ b/servidor/business/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
-            <version>3.4.22</version>
+            <version>3.4.12</version>
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
@@ -24,20 +24,20 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.9.0</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.7.0</version>
+            <version>3.6.28</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.4.22</version>
+            <version>3.4.4</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
